# resume-maker

./: .gitignore  README.md  pyproject.toml  requirements.txt
ResumeMaker/: __init__.py  ask_llm.py  resume_maker.py
ResumeMaker/prompts/: __init__.py  job_description.py
ResumeMaker/templates/: resume.tex.j2
ResumeMaker/utils/: __init__.py  logging_config.py
data/resume_yml/: example_resume.yml
tests/ask_llm_tests/: test_ask_llm.py  test_ollama_service.py  test_working_ask_llm.py
