[project]
name = "ResumeMaker"
version = "0.1.0"
description = "An AI based resume maker"
authors = [
    {name = "rajathjn",email = "rajathjnx@gmail.com"}
]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "colorlog>=6.9.0",
    "langchain-ollama>=0.2.3",
    "ollama>=0.4.7",
    "psutil>=7.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.9",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]
cu124 = [
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]


[tool.ruff]
# Set the maximum line length to 79.
exclude = [
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".tox",
    "_build",
    "build",
    "venv",
    ".pytest_cache",
    ".venv",
    ".vscode",
    ".idea"
]
line-length = 100
indent-width = 4
fix = true

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "I",   # isort
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
